.phase-b-pure-engine-ci/architecture.txt

> saga-mcp@2.0.0 test:architecture
> tsc && node --test tests/architecture/saga2-boundaries.test.mjs

file:///home/runner/work/saga-mcp/saga-mcp/tests/architecture/saga2-boundaries.test.mjs:129
    '{"type":"api_retry","error_status":429,"error":"rate_limit"}
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

SyntaxError: Invalid or unexpected token
    at compileSourceTextModule (node:internal/modules/esm/utils:318:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:89:18)
    at #translate (node:internal/modules/esm/loader:434:20)
    at afterLoad (node:internal/modules/esm/loader:502:29)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:507:12)
    at #getOrCreateModuleJobAfterResolve (node:internal/modules/esm/loader:560:36)
    at afterResolve (node:internal/modules/esm/loader:607:52)
    at ModuleLoader.getOrCreateModuleJob (node:internal/modules/esm/loader:613:12)
    at node:internal/modules/esm/loader:632:32
    at TracingChannel.tracePromise (node:diagnostics_channel:362:14)

Node.js v24.18.0
✖ tests/architecture/saga2-boundaries.test.mjs (32.270469ms)
ℹ tests 1
ℹ suites 0
ℹ pass 0
ℹ fail 1
ℹ cancelled 0
ℹ skipped 0
ℹ todo 0
ℹ duration_ms 41.321827

✖ failing tests:

test at tests/architecture/saga2-boundaries.test.mjs:1:1
✖ tests/architecture/saga2-boundaries.test.mjs (32.270469ms)
  'test failed'
